--- a/packages/rettangoli-ui/vt/specs/primitives/view/view-bgc-02.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/view/view-bgc-02.html
@@ -64,32 +64,32 @@ screen-instruc-end
     <rtgl-view h-bgc="ac" wh="40" g="md" p="md"> </rtgl-view>
     <rtgl-view h-bgc="mu" wh="40" g="md" p="md"> </rtgl-view>
     <rtgl-view h-bgc="mu" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view h-bgc="such" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view h-bgc="p" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view h-bgc="pc" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view h-bgc="s" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view h-bgc="sc" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view h-bgc="e" wh="40" g="md" p="md"></rtgl-view>
-    <rtgl-view h-bgc="ec" wh="40" g="md" p="md"></rtgl-view>
-    <rtgl-view h-bgc="isu" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view h-bgc="o" wh="40" g="md" p="md"></rtgl-view>
-    <rtgl-view h-bgc="ov" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view h-bgc="ac" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="pr" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="ac" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="se" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="mu" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="de" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view h-bgc="mu" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view h-bgc="fg" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="bo" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view h-bgc="mu" wh="40" g="md" p="md"></rtgl-view>
   </rtgl-view>
 
   <rtgl-view d="h">
     <rtgl-view bgc="mu" h-bgc="ac" wh="40" g="md" p="md"> </rtgl-view>
     <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="md" p="md"> </rtgl-view>
     <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="such" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="p" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="pc" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="s" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="sc" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="e" wh="40" g="md" p="md"></rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="ec" wh="40" g="md" p="md"></rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="isu" wh="40" g="md" p="md"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="o" wh="40" g="md" p="md"></rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="ov" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="ac" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="pr" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="ac" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="se" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="de" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="fg" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="bo" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="md" p="md"></rtgl-view>
   </rtgl-view>
 
 </rtgl-view>
