--- a/packages/rettangoli-ui/vt/specs/primitives/view/view-responsive-05.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/view/view-responsive-05.html
@@ -5,7 +5,7 @@ title: Responsive 5
   <rtgl-view d="h" g="md" h="200">
     <rtgl-view bgc="mu"  wh="200" sm-hidden>
     </rtgl-view>
-    <rtgl-view bgc="ec"  wh="200" lg-hidden>
+    <rtgl-view bgc="mu"  wh="200" lg-hidden>
     </rtgl-view>
   </rtgl-view>
 </rtgl-view>
