--- a/packages/rettangoli-ui/vt/specs/primitives/view/view-zindex-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/view/view-zindex-01.html
@@ -4,20 +4,20 @@ title: Z-index
 
 <rtgl-view d="h" g="lg" p="lg" wh="f">
   <rtgl-view bgc="mu" wh="120" pos="rel">
-    <rtgl-view pos="abs" bgc="e" wh="84"></rtgl-view>
-    <rtgl-view pos="abs" bgc="such" wh="64"></rtgl-view>
+    <rtgl-view pos="abs" bgc="de" wh="84"></rtgl-view>
+    <rtgl-view pos="abs" bgc="ac" wh="64"></rtgl-view>
     <rtgl-view pos="abs" bgc="mu" wh="48"></rtgl-view>
   </rtgl-view>
 
   <rtgl-view bgc="mu" wh="120" pos="rel">
-    <rtgl-view pos="abs" bgc="e" wh="84" z="1"></rtgl-view>
-    <rtgl-view pos="abs" bgc="such" wh="64"></rtgl-view>
+    <rtgl-view pos="abs" bgc="de" wh="84" z="1"></rtgl-view>
+    <rtgl-view pos="abs" bgc="ac" wh="64"></rtgl-view>
     <rtgl-view pos="abs" bgc="mu" wh="48"></rtgl-view>
   </rtgl-view>
 
   <rtgl-view bgc="mu" wh="120" pos="rel">
     <rtgl-view pos="abs" bgc="mu" wh="48" z="3"></rtgl-view>
-    <rtgl-view pos="abs" bgc="such" wh="64" z="2"></rtgl-view>
-    <rtgl-view pos="abs" bgc="e" wh="84" z="1"></rtgl-view>
+    <rtgl-view pos="abs" bgc="ac" wh="64" z="2"></rtgl-view>
+    <rtgl-view pos="abs" bgc="de" wh="84" z="1"></rtgl-view>
   </rtgl-view>
 </rtgl-view>
