--- a/packages/rettangoli-ui/vt/specs/primitives/view/view-bgc-03.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/view/view-bgc-03.html
@@ -3,8 +3,8 @@ title: "Background color (TBD)"
 ---
 
 <rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
-  <rtgl-view wh="80" g="md" p="md" s-bgc="e"> </rtgl-view>
-  <rtgl-view bgc="mu" wh="80" g="md" p="md" s-bgc="e"> </rtgl-view>
-  <rtgl-view wh="80" g="md" p="md" s-h-bgc="e"> </rtgl-view>
-  <rtgl-view bgc="mu" wh="80" g="md" p="md" s-h-bgc="e"> </rtgl-view>
+  <rtgl-view wh="80" g="md" p="md" s-bgc="de"> </rtgl-view>
+  <rtgl-view bgc="mu" wh="80" g="md" p="md" s-bgc="de"> </rtgl-view>
+  <rtgl-view wh="80" g="md" p="md" s-h-bgc="de"> </rtgl-view>
+  <rtgl-view bgc="mu" wh="80" g="md" p="md" s-h-bgc="de"> </rtgl-view>
 </rtgl-view>
