--- a/packages/rettangoli-ui/vt/specs/components/form/mixed-inputs.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/mixed-inputs.html
@@ -34,6 +34,14 @@ title: "Mixed Inputs"
       max: 20,
       step: 1,
     }, {
+      name: 'salary',
+      inputType: 'slider-input',
+      label: 'Ideal Salary',
+      description: 'How much salary do you want every month?',
+      min: 3000,
+      max: 50000,
+      step: 1000,
+    }, {
       name: 'role',
       inputType: 'select',
       label: 'Role',
