--- a/packages/rettangoli-ui/vt/specs/components/dialog/open.html
+++ b/packages/rettangoli-ui/vt/specs/components/dialog/open.html
@@ -1,9 +1,9 @@
 ---
-title: "Basic"
+title: "Open"
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog</rtgl-button>
-  <rtgl-dialog id="dialog">
+  <rtgl-dialog id="dialog" open>
     <rtgl-view slot="content" g="md">
       <rtgl-text s="lg">Dialog Content</rtgl-text>
       <rtgl-text c="mu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</rtgl-text>
