--- a/packages/rettangoli-ui/vt/specs/components/dialog/with-form.html
+++ b/packages/rettangoli-ui/vt/specs/components/dialog/with-form.html
@@ -3,7 +3,7 @@ title: "Dialog with Form"
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Form Dialog</rtgl-button>
-  <rtgl-dialog id="dialog">
+  <rtgl-dialog id="dialog" open>
   </rtgl-dialog>
 </rtgl-view>
 
