--- a/packages/rettangoli-ui/vt/specs/components/dialog/basic.html
+++ b/packages/rettangoli-ui/vt/specs/components/dialog/basic.html
@@ -7,13 +7,26 @@ title: "Basic"
     <rtgl-view slot="content" g="md">
       <rtgl-text s="lg">Dialog Content</rtgl-text>
       <rtgl-text c="mu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</rtgl-text>
+      <rtgl-button id="close-button" variant="secondary">Close Dialog</rtgl-button>
     </rtgl-view>
   </rtgl-dialog>
 </rtgl-view>
 
 <script>
   const button = document.getElementById('button');
+  const dialog = document.getElementById('dialog');
+  const closeButton = document.getElementById('close-button');
+  
   button.addEventListener('click', () => {
-    dialog.showModal();
+    dialog.setAttribute('open', '');
+  });
+  
+  closeButton.addEventListener('click', () => {
+    dialog.removeAttribute('open');
+  });
+  
+  // Listen for dialog close events (overlay click or ESC key)
+  dialog.addEventListener('close', () => {
+    dialog.removeAttribute('open');
   });
 </script>
