--- a/packages/rettangoli-ui/vt/specs/components/dialog/scroll.html
+++ b/packages/rettangoli-ui/vt/specs/components/dialog/scroll.html
@@ -3,7 +3,7 @@ title: "Scroll"
 ---
 <rtgl-view g="lg" p="lg" wh="f" fw="w">
   <rtgl-button id="button">Open Dialog</rtgl-button>
-  <rtgl-dialog id="dialog" open>
+  <rtgl-dialog id="dialog">
     <rtgl-view slot="content" g="md">
       <rtgl-text s="lg">Dialog Content</rtgl-text>
       <rtgl-text c="mu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</rtgl-text>
@@ -61,7 +61,14 @@ title: "Scroll"
 
 <script>
   const button = document.getElementById('button');
+  const dialog = document.getElementById('dialog');
+  
   button.addEventListener('click', () => {
-    dialog.showModal();
+    dialog.setAttribute('open', '');
+  });
+  
+  // Listen for dialog close events (overlay click or ESC key)
+  dialog.addEventListener('close', () => {
+    dialog.removeAttribute('open');
   });
 </script>
