--- a/packages/rettangoli-ui/vt/specs/components/dropdownMenu/open.html
+++ b/packages/rettangoli-ui/vt/specs/components/dropdownMenu/open.html
@@ -31,11 +31,9 @@ title: "Open"
       label: 'Item 5',
       type: 'item',
     },
-  ]
-  dropdownMenu.isOpen = true;
-  dropdownMenu.position = {
-    x: 20,
-    y: 20,
-  }
-  dropdownMenu.render();
+  ];
+  
+  dropdownMenu.setAttribute('open', '');
+  dropdownMenu.setAttribute('x', '20');
+  dropdownMenu.setAttribute('y', '20');
 </script>
