--- a/packages/rettangoli-ui/vt/specs/components/breadcrumb/custom-separator.html
+++ b/packages/rettangoli-ui/vt/specs/components/breadcrumb/custom-separator.html
@@ -14,6 +14,6 @@ title: "Breadcrumb - Custom Separator"
     { label: "Subcategory", id: "breadcrumb-subcategory" },
     { label: "Current Page" }
   ];
-  breadcrumb.separator = "chevron-right";
+  breadcrumb.separator = "threeDots";
   breadcrumb.render();
 </script>
